Inserção e atualização do Header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <header>
         <div>
+            <a href="#"><img src="ut.png"></a>
             <a href="#" class="active">Home</a>
             <a href="#">Characters</a>
             <a href="#">Content</a>
