--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     
 </body>
 <footer>
-    <img src="imagens/qr-code.png" alt="codigo QR">
+    <img src="qr-code.png" alt="codigo QR">
 </footer>
 </html>
