--- a/char.html
+++ b/char.html
@@ -74,6 +74,6 @@
     
 </body>
 <footer>
-    <img src="imagens/qr-code.png" alt="codigo QR">
+    <img src="qr-code.png" alt="codigo QR">
 </footer>
 </html>
