--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Projeto de TI</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<header>
-        <div>
+<header class="header">
+        <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
             <a href="char.html">Characters</a>
             <a href="#">Content</a>
@@ -17,7 +17,7 @@
     
     <div>
         <h1 class="conteiner">Projeto de Tecnologias da Internet</h1>
-        <div>
+        <div class="content">
             <h2>Undertale</h2>
             <p>Undertale é um jogo de de role-playing onde
             tu não tens de matar ninguém! Undertale foi criado por
@@ -29,7 +29,7 @@
     </div>
     
 </body>
-<footer>
+<footer class="header">
     <img src="qr-code.png" alt="codigo QR">
 </footer>
 </html>
