--- a/char.html
+++ b/char.html
@@ -16,8 +16,8 @@
 <body>
     
     <div>
-        <h1 class="conteiner">Personagens de Undertale</h1>
-        <div class="conteudo content">
+        <h1 class="conteiner content">Personagens de Undertale</h1>
+        <div class="conteudo facts">
             <h2>Toriel</h2>
             <p>Toriel é uma cabra branca, a guardiã das Ruínas em Undertale, 
                 ex-Rainha do Subsolo e ex-esposa de Asgore, que se isolou 
@@ -28,7 +28,7 @@
                 de fogo e preparando tortas de caramelo e canela para o protagonista. </p>
                 <img src="imagens/toriel.png" alt="png-toriel">
         </div>
-        <div class="conteudo content">
+        <div class="conteudo facts">
             <h2>Papyrus</h2>
             <p>Papyrus é um personagem carismático e otimista de Undertale, 
                 irmão de Sans, que sonha em se tornar um membro da Guarda Real 
@@ -39,7 +39,7 @@
                 romântico, mostrando grande lealdade e cuidado pelo irmão. </p>
                 <img src="imagens/papyrus.png" alt="png-papyrus">
         </div>
-        <div class="conteudo content">
+        <div class="conteudo facts">
             <h2>Sans</h2>
             <p>Sans é um esqueleto preguiçoso e bem-humorado de Undertale, 
                 conhecido por suas piadas e por ser um personagem de apoio, 
@@ -49,7 +49,7 @@
                 sendo um adversário formidável que testa os limites do jogo e do próprio jogador.</p>
                 <img src="imagens/sans.png" alt="png-sans">
         </div>
-        <div class="conteudo content">
+        <div class="conteudo facts">
             <h2>Undyne</h2>
             <p>Undyne é um monstro-peixe guerreira, líder da Guarda Real em 
                 Undertale, conhecida por sua força, determinação e personalidade 
@@ -59,7 +59,7 @@
                 imparável, sendo treinadora de Papyrus e uma figura inspiradora. </p>
                 <img src="imagens/undyne.png" alt="png-undyne">
         </div>
-        <div class="conteudo content">
+        <div class="conteudo facts">
             <h2>Alphys</h2>
             <p>Alphys é a Cientista Real tímida, insegura e nerd de Undertale, 
                 apaixonada por anime e mangá, que guia o protagonista pelo 
