conteudo content e melhorias

--- a/content.html
+++ b/content.html
@@ -9,24 +9,26 @@
 <header class="header">
         <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
-            <a href="char.html" class="active">Characters</a>
-            <a href="content.html">Content</a>
+            <a href="char.html">Characters</a>
+            <a href="content.html" class="active">Content</a>
         </div>
     </header>
 <body>
     
     <div>
-        <h1 class="conteiner">Personagens de Undertale</h1>
-        <div class="conteudo content">
-            <h2>Toriel</h2>
-            <p>Toriel é uma cabra branca, a guardiã das Ruínas em Undertale, 
-                ex-Rainha do Subsolo e ex-esposa de Asgore, que se isolou 
-                após a morte dos seus filhos, Asriel e o primeiro humano 
-                que adotou, para proteger os humanos que caem lá, agindo 
-                como uma figura materna, acolhendor e protetora, mas com 
-                um temperamento forte quando necessário, usando magia 
-                de fogo e preparando tortas de caramelo e canela para o protagonista. </p>
-                <img src="imagens/toriel.png" alt="png-toriel">
+        <h1 class="conteiner">Informação geral de Undertale</h1>
+        <div class="conteudo2 content">
+            <h2>Significado de cada alma humana</h2>
+            <p>As almas em Undertale representam traços de personalidade 
+                humanos que determinam suas habilidades únicas no jogo, 
+                como mover-se de forma diferente ou usar ataques específicos, 
+                sendo a <strong style="color: red;">Alma Vermelha, a Alma de Determinação,</strong> a mais importante, permitindo 
+                o jogador salvar e carregar, enquanto as outras seis almas 
+                coletadas pelos monstros a partir dos humanos anteriores, <strong style="color: cyan">Alma Ciano - Paciência</strong>, 
+                <strong style="color: orange;">Alma Laranja - Coragem</strong>, <strong style="color: blue;">Alma Azul - Integridade</strong>, 
+                <strong style="color: purple;">Alma Roxo - Perseverança</strong>, <strong style="color: green;">Alma Verde - Bondade</strong>, 
+                <strong style="color: yellow;">Alma Amarelo - Justiça</strong>, são essenciais para a trama e para a manipulação de Flowey. </p>
+                <img src="imagens/human-souls.png" alt="png-almas-humanas">
         </div>
         <div class="conteudo content">
             <h2>Papyrus</h2>
