--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
             <a href="char.html">Characters</a>
-            <a href="#">Content</a>
+            <a href="content.html">Content</a>
         </div>
     </header>
 <body>
