revamp total do site

--- a/content.html
+++ b/content.html
@@ -30,36 +30,55 @@
                 <strong style="color: yellow;">Alma Amarelo - Justiça</strong>, são essenciais para a trama e para a manipulação de Flowey. </p>
                 <img src="imagens/human-souls.png" alt="png-almas-humanas">
         </div>
-        <div class="conteudo content">
-            <h2>Papyrus</h2>
-            <p>Papyrus é um personagem carismático e otimista de Undertale, 
-                irmão de Sans, que sonha em se tornar um membro da Guarda Real 
-                capturando um humano, mas é amável e inocente, criando 
-                quebra-cabeças na floresta de Snowdin para isso; ele é um 
-                chefe de jogo que, apesar de querer capturar o protagonista, 
-                acaba formando uma amizade com ele e oferece um encontro 
-                romântico, mostrando grande lealdade e cuidado pelo irmão. </p>
-                <img src="imagens/papyrus.png" alt="png-papyrus">
+        <div class="conteudo2 content">
+            <h2>Almas de Monstros</h2>
+            <p>Quando um monstro morre, seu corpo se desfaz em poeira e sua 
+                alma se quebra quase imediatamente, não conseguindo permanecer 
+                intacta após a morte. Diferente das almas humanas, que são fortes 
+                o suficiente para existir sem um corpo e atravessar a barreira 
+                mágica, as almas dos monstros não possuem determinação suficiente 
+                para manter sua forma sozinhas.
+                Os monstros possuem apenas pequenas quantidades de determinação, 
+                e a exposição a grandes doses dessa energia causa instabilidade 
+                extrema. Isso é visto nos experimentos do Laboratório Verdadeiro, 
+                onde a determinação faz com que corpos e almas de monstros se 
+                fundam e percam sua forma original, dando origem aos chamados amálgamas. </p>
+                <img style="width: 9em; padding: 0.8em; border: 0.5em double #fff200" src="imagens/monster.png" alt="png-monster_soul">
         </div>
-        <div class="conteudo content">
-            <h2>Sans</h2>
-            <p>Sans é um esqueleto preguiçoso e bem-humorado de Undertale, 
-                conhecido por suas piadas e por ser um personagem de apoio, 
-                mas que se torna o chefe mais difícil e perigoso na rota genocida, 
-                desafiando o jogador por suas ações, usando magia e revelando um 
-                passado misterioso ligado ao cientista W.D. Gaster e à determinação, 
-                sendo um adversário formidável que testa os limites do jogo e do próprio jogador.</p>
-                <img src="imagens/sans.png" alt="png-sans">
+        <div class="conteudo2 content">
+            <h2>Almas de Humanos</h2>
+            <p>No universo de Undertale, as almas humanas são extremamente 
+                poderosas e funcionam de maneira oposta às almas dos monstros. 
+                Elas são compostas principalmente de determinação, uma força que 
+                permite aos humanos resistirem à morte, persistirem mesmo após o 
+                corpo físico ser destruído e desafiarem as regras normais do mundo.
+                Diferente dos monstros, o corpo humano é majoritariamente físico, 
+                enquanto a alma é uma entidade separada e estável. Quando um 
+                humano morre, sua alma permanece intacta, podendo existir sem 
+                o corpo por um longo período de tempo. Essa característica é 
+                o que torna possível atravessar a barreira mágica criada pelos 
+                monstros, algo que apenas almas humanas conseguem fazer.</p>
+                <img style="width: 9em; padding: 0.8em; border: 0.5em double #fff200" src="imagens/dt.png" alt="png-dt_soul">
         </div>
-        <div class="conteudo content">
-            <h2>Undyne</h2>
-            <p>Undyne é um monstro-peixe guerreira, líder da Guarda Real em 
-                Undertale, conhecida por sua força, determinação e personalidade 
-                explosiva, sendo uma heroína para muitos, mas temida como caçadora 
-                de humanos, especialmente por sua habilidade em usar lanças 
-                mágicas e sua determinação inabalável, que a torna quase 
-                imparável, sendo treinadora de Papyrus e uma figura inspiradora. </p>
-                <img src="imagens/undyne.png" alt="png-undyne">
+        <div class="conteudo2 content">
+            <h2>A Barreira</h2>
+            <p>No passado, ambas as raças viviam juntas na superfície, 
+                até que os humanos descobriram que os monstros eram capazes 
+                de absorver almas humanas, obtendo um poder imenso. Temendo 
+                essa possibilidade, os humanos iniciaram uma guerra. Por 
+                possuírem corpos físicos mais resistentes e almas ricas em 
+                determinação, os humanos venceram o conflito.
+
+                Como resultado da guerra, os humanos selaram os monstros 
+                no subsolo por meio de uma Barreira mágica criada apartir 
+                do poder das sete almas humanas. 
+                Essa Barreira foi criada de forma que apenas almas 
+                humanas conseguem atravessá-la naturalmente. Monstros não 
+                conseguem passar, independentemente de sua força, a menos 
+                que absorvam uma alma humana. A Barreira só pode ser 
+                completamente destruída com o poder equivalente a sete 
+                almas humanas</p>
+                <img style="width: 20em;" src="imagens/barreira.gif" alt="gif-barreira">
         </div>
         <div class="conteudo content">
             <h2>Alphys</h2>
