organização das colunas personagens

--- a/char.html
+++ b/char.html
@@ -9,57 +9,61 @@
 <header class="header">
         <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
-            <a href="char.html" class="active">Characters</a>
-            <a href="content.html">Content</a>
+            <a href="char.html" class="active">Personagens</a>
+            <a href="content.html">Conteudo</a>
         </div>
     </header>
 <body>
     
     <div>
         <h1 class="conteiner">Personagens de Undertale</h1>
-        <div class="conteudo content">
-            <h2>Toriel</h2>
-            <p>Toriel é uma cabra branca, a guardiã das Ruínas em Undertale, 
-                ex-Rainha do Subsolo e ex-esposa de Asgore, que se isolou 
-                após a morte dos seus filhos, Asriel e o primeiro humano 
-                que adotou, para proteger os humanos que caem lá, agindo 
-                como uma figura materna, acolhendor e protetora, mas com 
-                um temperamento forte quando necessário, usando magia 
-                de fogo e preparando tortas de caramelo e canela para o protagonista. </p>
-                <img src="imagens/toriel.png" alt="png-toriel">
+        <div class="coluna content">
+            <div class="conteudo content">
+                <h2>Toriel</h2>
+                <p>Toriel é uma cabra branca, a guardiã das Ruínas em Undertale, 
+                    ex-Rainha do Subsolo e ex-esposa de Asgore, que se isolou 
+                    após a morte dos seus filhos, Asriel e o primeiro humano 
+                    que adotou, para proteger os humanos que caem lá, agindo 
+                    como uma figura materna, acolhendor e protetora, mas com 
+                    um temperamento forte quando necessário, usando magia 
+                    de fogo e preparando tortas de caramelo e canela para o protagonista. </p>
+                    <img src="imagens/toriel.png" alt="png-toriel">
+            </div>
+            <div class="conteudo content">
+                <h2>Papyrus</h2>
+                <p>Papyrus é um personagem carismático e otimista de Undertale, 
+                    irmão de Sans, que sonha em se tornar um membro da Guarda Real 
+                    capturando um humano, mas é amável e inocente, criando 
+                    quebra-cabeças na floresta de Snowdin para isso; ele é um 
+                    chefe de jogo que, apesar de querer capturar o protagonista, 
+                    acaba formando uma amizade com ele e oferece um encontro 
+                    romântico, mostrando grande lealdade e cuidado pelo irmão. </p>
+                    <img src="imagens/papyrus.png" alt="png-papyrus">
+            </div>
         </div>
-        <div class="conteudo content">
-            <h2>Papyrus</h2>
-            <p>Papyrus é um personagem carismático e otimista de Undertale, 
-                irmão de Sans, que sonha em se tornar um membro da Guarda Real 
-                capturando um humano, mas é amável e inocente, criando 
-                quebra-cabeças na floresta de Snowdin para isso; ele é um 
-                chefe de jogo que, apesar de querer capturar o protagonista, 
-                acaba formando uma amizade com ele e oferece um encontro 
-                romântico, mostrando grande lealdade e cuidado pelo irmão. </p>
-                <img src="imagens/papyrus.png" alt="png-papyrus">
+        <div class="coluna content">
+            <div class="conteudo content">
+                <h2>Sans</h2>
+                <p>Sans é um esqueleto preguiçoso e bem-humorado de Undertale, 
+                    conhecido por suas piadas e por ser um personagem de apoio, 
+                    mas que se torna o chefe mais difícil e perigoso na rota genocida, 
+                    desafiando o jogador por suas ações, usando magia e revelando um 
+                    passado misterioso ligado ao cientista W.D. Gaster e à determinação, 
+                    sendo um adversário formidável que testa os limites do jogo e do próprio jogador.</p>
+                    <img src="imagens/sans.png" alt="png-sans">
+            </div>
+            <div class="conteudo content">
+                <h2>Undyne</h2>
+                <p>Undyne é um monstro-peixe guerreira, líder da Guarda Real em 
+                    Undertale, conhecida por sua força, determinação e personalidade 
+                    explosiva, sendo uma heroína para muitos, mas temida como caçadora 
+                    de humanos, especialmente por sua habilidade em usar lanças 
+                    mágicas e sua determinação inabalável, que a torna quase 
+                    imparável, sendo treinadora de Papyrus e uma figura inspiradora. </p>
+                    <img src="imagens/undyne.png" alt="png-undyne">
+            </div>
         </div>
-        <div class="conteudo content">
-            <h2>Sans</h2>
-            <p>Sans é um esqueleto preguiçoso e bem-humorado de Undertale, 
-                conhecido por suas piadas e por ser um personagem de apoio, 
-                mas que se torna o chefe mais difícil e perigoso na rota genocida, 
-                desafiando o jogador por suas ações, usando magia e revelando um 
-                passado misterioso ligado ao cientista W.D. Gaster e à determinação, 
-                sendo um adversário formidável que testa os limites do jogo e do próprio jogador.</p>
-                <img src="imagens/sans.png" alt="png-sans">
-        </div>
-        <div class="conteudo content">
-            <h2>Undyne</h2>
-            <p>Undyne é um monstro-peixe guerreira, líder da Guarda Real em 
-                Undertale, conhecida por sua força, determinação e personalidade 
-                explosiva, sendo uma heroína para muitos, mas temida como caçadora 
-                de humanos, especialmente por sua habilidade em usar lanças 
-                mágicas e sua determinação inabalável, que a torna quase 
-                imparável, sendo treinadora de Papyrus e uma figura inspiradora. </p>
-                <img src="imagens/undyne.png" alt="png-undyne">
-        </div>
-        <div class="conteudo content">
+        <div style="width: 50%; margin-right: 50%;margin-left: 25%;" class="coluna conteudo content">
             <h2>Alphys</h2>
             <p>Alphys é a Cientista Real tímida, insegura e nerd de Undertale, 
                 apaixonada por anime e mangá, que guia o protagonista pelo 
@@ -75,7 +79,7 @@
 </body>
 <footer class="footer">
     <img src="qr-code.png" alt="codigo QR">
-    <a href="#top">↑</a>
+    <h2><a href="#top">↑</a></h2>
     <p>©Tamachsu</p>
 </footer>
 </html>
