--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <header class="header">
         <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
-            <a href="char.html">Characters</a>
-            <a href="content.html">Content</a>
+            <a href="char.html">Personagens</a>
+            <a href="content.html">Conteudo</a>
         </div>
     </header>
 <body>
