--- a/content.html
+++ b/content.html
@@ -9,8 +9,8 @@
 <header class="header">
         <div class="menu">
             <a href="index.html"><img src="imagens/ut.png"></a>
-            <a href="char.html">Characters</a>
-            <a href="content.html" class="active">Content</a>
+            <a href="char.html">Personagens</a>
+            <a href="content.html" class="active">Conteudo</a>
         </div>
     </header>
 <body>
@@ -96,7 +96,7 @@
 </body>
 <footer class="footer">
     <img src="qr-code.png" alt="codigo QR">
-    <a href="#top">↑</a>
+    <h2><a href="#top">↑</a></h2>
     <p>©Tamachsu</p>
 </footer>
 </html>
