Correção de erros bugs

--- a/char.html
+++ b/char.html
@@ -17,7 +17,7 @@
     
     <div>
         <h1 class="conteiner">Personagens de Undertale</h1>
-        <div class="coluna content">
+        <div style="margin-top: 1.25em;"  class="coluna cont-char">
             <div class="conteudo content">
                 <h2>Toriel</h2>
                 <p>Toriel é uma cabra branca, a guardiã das Ruínas em Undertale, 
@@ -41,7 +41,7 @@
                     <img src="imagens/papyrus.png" alt="png-papyrus">
             </div>
         </div>
-        <div class="coluna content">
+        <div class="coluna cont-char">
             <div class="conteudo content">
                 <h2>Sans</h2>
                 <p>Sans é um esqueleto preguiçoso e bem-humorado de Undertale, 
@@ -63,16 +63,20 @@
                     <img src="imagens/undyne.png" alt="png-undyne">
             </div>
         </div>
-        <div style="width: 50%; margin-right: 50%;margin-left: 25%;" class="coluna conteudo content">
-            <h2>Alphys</h2>
-            <p>Alphys é a Cientista Real tímida, insegura e nerd de Undertale, 
-                apaixonada por anime e mangá, que guia o protagonista pelo 
-                Subsolo através de câmeras enquanto esconde suas inseguranças 
-                e culpa, sendo responsável indiretamente por Flowey e os 
-                Amálgamos, um mistério revelado no Verdadeiro Laboratório, 
-                e tem um amor não correspondido por Undyne, com quem forma 
-                um relacionamento na Rota Pacifista. </p>
-                <img src="imagens/alphys.png" alt="png-alphys">
+        <div class="coluna cont-char" style="align-items: center;">
+            <div style="width: 100%;"></div>
+            <div style="margin-top: -1.25em;"  class="conteudo content">
+                <h2>Alphys</h2>
+                <p>Alphys é a Cientista Real tímida, insegura e nerd de Undertale, 
+                    apaixonada por anime e mangá, que guia o protagonista pelo 
+                    Subsolo através de câmeras enquanto esconde suas inseguranças 
+                    e culpa, sendo responsável indiretamente por Flowey e os 
+                    Amálgamos, um mistério revelado no Verdadeiro Laboratório, 
+                    e tem um amor não correspondido por Undyne, com quem forma 
+                    um relacionamento na Rota Pacifista. </p>
+                    <img src="imagens/alphys.png" alt="png-alphys">
+            </div>
+            <div style="width: 100%;"></div>
         </div>
     </div>
     
