--- a/content.html
+++ b/content.html
@@ -78,18 +78,18 @@
                 que absorvam uma alma humana. A Barreira só pode ser 
                 completamente destruída com o poder equivalente a sete 
                 almas humanas</p>
-                <img style="width: 20em;" src="imagens/barreira.gif" alt="gif-barreira">
+                <img class="imagem imagens" src="imagens/barreira.gif" alt="gif-barreira">
         </div>
-        <div class="conteudo content">
-            <h2>Alphys</h2>
-            <p>Alphys é a Cientista Real tímida, insegura e nerd de Undertale, 
-                apaixonada por anime e mangá, que guia o protagonista pelo 
-                Subsolo através de câmeras enquanto esconde suas inseguranças 
-                e culpa, sendo responsável indiretamente por Flowey e os 
-                Amálgamos, um mistério revelado no Verdadeiro Laboratório, 
-                e tem um amor não correspondido por Undyne, com quem forma 
-                um relacionamento na Rota Pacifista. </p>
-                <img src="imagens/alphys.png" alt="png-alphys">
+        <div class="conteudo2 content">
+            <h2>Acronimos</h2>
+            <p>Em Undertale, os acrónimos mais comuns incluem EXP (Execution Points), 
+                LV (Level of Violence), DT (Determination), HP (Health Points/HoPE), 
+                ATK (Attack), DEF (Defense), e KR (Karmic Retribution), além de 
+                conceitos como ALMA (Soul), SAVE, LOAD, RESET, GOLD, MTT 
+                (MechaTronic Technology), e CORE (Central Processing Unit/Central 
+                Operating Research Engine), com interpretações variando entre 
+                siglas oficiais e teorias de fãs (como HoPE para HP).</p>
+                <img style="width:20%;" src="imagens/Stats.png" alt="png-alphys">
         </div>
     </div>
     
