Correção de Imagem correspondente

--- a/content.html
+++ b/content.html
@@ -89,7 +89,7 @@
                 (MechaTronic Technology), e CORE (Central Processing Unit/Central 
                 Operating Research Engine), com interpretações variando entre 
                 siglas oficiais e teorias de fãs (como HoPE para HP).</p>
-                <img style="width:20%;" src="imagens/Stats.png" alt="png-alphys">
+                <img class="imagem2 imagens" src="imagens/Stats.png" alt="png-alphys">
         </div>
     </div>
     
